tests/baselines/reference/typeArgumentInferenceWithRecursivelyReferencedTypeAliasToTypeLiteral01.errors.txt
typeArgumentInferenceWithRecursivelyReferencedTypeAliasToTypeLiteral01.ts(7,1): error TS2454: Variable 'nodes' is used before being assigned.


==== typeArgumentInferenceWithRecursivelyReferencedTypeAliasToTypeLiteral01.ts (1 errors) ====
    type TreeNode = {
        name: string;
        parent: TreeNode;
    }
    
    var nodes: TreeNode[];
    nodes.map(n => n.name);
    ~~~~~
!!! error TS2454: Variable 'nodes' is used before being assigned.
    